# liboidc-agent-py

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
liboidc-agent/: __init__.py  liboidc-agent.py
liboidcagent/: __init__.py  liboidcagent.py
