[metadata]
name = liboidcagent
version = 0.6.0
summary =
description = A python library for requesting OpenID Connect access tokens from oidc-agent.
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md

author = Gabriel Zachmann
author_email = oidc-agent-contact@lists.kit.edu

url = https://github.com/indigo-dc/liboidc-agent-py
project_urls =
    Source = https://github.com/indigo-dc/liboidc-agent-py
    Bug Tracker = https://github.com/indigo-dc/liboidc-agent-py/issues
    Documentation = https://indigo-dc.gitbooks.io/oidc-agent/api-py.html

license = MIT
license_files = LICENSE

classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Unix
    Topic :: System :: Systems Administration :: Authentication/Directory
    Topic :: Utilities
    Topic :: Security
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Environment :: Console
    Natural Language :: English

[options]
install_requires =
    PyNaCl>=1.2.0
packages = find:
